# sse_bridge

./: Cargo.toml  README.md  deploy.sh
.github/workflows/: build_and_test.yml  deploy.yml
crates/staticmcp_sse_dynamic/: Cargo.toml
crates/staticmcp_sse_dynamic/src/: main.rs
crates/staticmcp_sse_fixed/: Cargo.toml
crates/staticmcp_sse_fixed/src/: main.rs
crates/staticmcp_sse_lib/: Cargo.toml
crates/staticmcp_sse_lib/src/: lib.rs
