[workspace]
resolver = "2"
members = [
    "crates/staticmcp_sse_lib",
    "crates/staticmcp_sse_fixed",
    "crates/staticmcp_sse_dynamic",
]

[workspace.dependencies]
shared-mcp-lib = { path = "crates/staticmcp_sse_lib" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
