[package]
name = "staticmcp_sse_dynamic"
description = "A SSE bridge that enables MCP clients to connect to StaticMCP files over HTTP dynamically."
version = "0.0.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/StaticMCP/sse_bridge"

[[bin]]
name = "staticmcp_sse_dynamic"
path = "src/main.rs"

[dependencies]
staticmcp_sse_lib = { path = "../staticmcp_sse_lib" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
async-stream = "0.3"